--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -25,4 +25,4 @@ test:
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   secret_key_base: <%= ENV["DEVISE_SECRET_KEY"] || ENV["SECRET_KEY_BASE"] %>
-  secret_key_base: <%= ENV["DEVISE_PEPPER"] || ENV["SECRET_KEY_BASE"] %>
+  devise_pepper: <%= ENV["DEVISE_PEPPER"] || ENV["SECRET_KEY_BASE"] %>
